# hachiko

./: .gitignore  .gitignore.bak  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/api/include/: camera.h  game_actors.h  game_camera.h  game_events.h  hachiko_api.h  input_controller_api.h
engine/api/src/: camera.cpp  game_actors.cpp  hachiko_api.cpp  input_controller_api.cpp
engine/core/: constant_buffers_manager.cpp  constant_buffers_manager.h  engine.cpp  engine.h  game_controller.cpp  game_controller.h  gpu_heaps_manager.cpp  gpu_heaps_manager.h  hch_renderer.cpp  hch_renderer.h  image.h  input_controller.cpp  input_controller.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader_pass.cpp  shader_pass.h  terrain.cpp  terrain.h  terrain_consts.h  terrain_render_pass.cpp  terrain_render_pass.h  virtual_keys.hpp  wic_resource_loader.cpp  wic_resource_loader.h
engine/core/common/: pch.h  utils.cpp  utils.h
engine/core/shaders/: render_terrain_shader.dsh  render_terrain_shader.hsh  render_terrain_shader.psh  render_terrain_shader.vsh  render_terrain_shader_in_out.fx  sample_shader.psh  sample_shader.vsh  sample_shader_in_out.fx
engine/platform/: wnd_app.cpp  wnd_app.h
terrain_demo/: CMakeLists.txt  demo_terrain.cpp  demo_terrain.rc  demo_terrain_app.cpp  demo_terrain_app.h  dx_wnd_app.cpp  dx_wnd_app.h  resource.h  wnd_app.cpp  wnd_app.h
test/gtest/: CMakeLists.txt
test/gtest/threads/: CMakeLists.txt  threads_test.cpp
